# forcola

./: .gitignore  CHANGELOG.md  README.md  mix.exs  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
guides/: adopting_forcola.md  alternatives.md  getting_started.md  process_groups.md
lib/: forcola.ex
lib/forcola/: daemon.ex  duplex.ex  not_implemented_error.ex  precompiled.ex  result.ex  shim.ex  stream.ex
lib/mix/tasks/: forcola.checksum.ex
lib/mix/tasks/compile/: forcola_shim.ex
native/forcola_shim/: Cargo.toml
native/forcola_shim/src/: cgroup.rs  credit.rs  frame.rs  main.rs  privdrop.rs  protocol.rs  supervisor.rs
native/forcola_shim/tests/: integration.rs
test/: forcola_test.exs
test/forcola/: cgroup_test.exs  daemon_test.exs  duplex_test.exs  output_fidelity_test.exs  precompiled_test.exs  run_as_user_test.exs  run_test.exs  shim_death_test.exs  signal_status_test.exs  stream_test.exs  wedged_shim_test.exs
test/mix/: compile_forcola_shim_test.exs
