[package]
name = "forcola_shim"
version = "0.1.0"
edition = "2021"
description = "Process-group supervisor shim for the forcola Elixir package"
license = "MIT"

[[bin]]
name = "forcola_shim"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[dependencies]
rustix = { version = "1.1.4", features = ["process", "pipe", "pty", "termios"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
