[package]
name = "forcola_shim"
version = "0.1.0"
edition = "2021"
description = "Process-group supervisor shim for the forcola Elixir package"
license = "MIT"

[[bin]]
name = "forcola_shim"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[dependencies]
# libc is already pulled in transitively by rustix; promoting it to a direct
# dependency adds no new crate. rustix 1.1.4 only exposes Linux-only
# per-thread set_thread_uid/gid/groups, which are the wrong semantics for a
# process-wide fork+exec drop and not portable to macOS. libc gives the
# portable process-level setgroups/setgid/setuid plus the parent-side
# getpwnam_r/getgrnam_r/getgrouplist resolution helpers.
libc = "0.2"
rustix = { version = "1.1.4", features = ["process", "pipe", "pty", "termios"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
